# pipecat

ui/src/: App.tsx  types.ts  webrtc.ts
univox/: .gitignore  README.md  package-lock.json  pyproject.toml
univox/src/univox/: __init__.py  deepgram_stt.py  provider.py  service.py
univox/src/univox/examples/: __init__.py  basic_vad_pipecat.py
univox/src/univox/providers/: __init__.py  deepgram.py
univox/src/univox/vad/: __init__.py  cobra.py
univox/ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
univox/ui/src/: App.tsx  types.ts  webrtc.ts
